<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"

    >


    <TextView
        android:id="@+id/titulo"
        style="@style/etiquetas"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/apptareas"
        android:textSize="40dp"
        android:textColor="@color/verdeClaro"
        />

    <TextView
        android:id="@+id/subtitulo"
        style="@style/etiquetas"
        android:layout_width="41dp"
        android:layout_height="36dp"
        android:layout_below="@id/titulo"
        android:layout_marginTop="5dp"
        android:drawableTop="@mipmap/bird"
        android:text="@string/registro" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitulo"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp">

<!-- Nombre de usuario -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaUserRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@android:color/white"
                android:hint="@string/usuario"
                android:textColor="@color/design_default_color_primary"
                android:textSize="17sp">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
<!-- Correo Electronico -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaEmailRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@android:color/white"
                android:hint="@string/correo_electronico"
                android:textColor="@color/design_default_color_primary"
                android:textSize="17sp"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

<!-- Numero de telefono -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaTelefonoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@android:color/white"
                android:hint="@string/numero_de_telefono"
                android:inputType="numberSigned"
                android:textColor="@color/design_default_color_primary"
                android:textSize="17sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

<!-- Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaPassRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColor="@color/design_default_color_primary"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

<!-- Confirmar Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaPassConfirmacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="Confirmar contraseña"
                android:inputType="textPassword"
                android:textColor="@color/design_default_color_primary"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonRegistrar"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:drawableLeft="@drawable/register"
        android:text="@string/registrarse"
        android:textSize="17sp"
        app:cornerRadius="25dp"
        app:rippleColor="@color/white" />



</RelativeLayout>