<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".activities.LoginActivity">

    <!-- Ponemos imagen de fondo manualmente -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imagen_de_fondo"
        android:scaleType="fitXY"
        android:src="@mipmap/fondo"
        android:tint="#72000000"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/titulo"
        style="@style/etiquetas"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/apptareas"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/subtitulo"
        style="@style/etiquetas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:layout_marginTop="5dp"
        android:drawableTop="@mipmap/logo" />

    <!--LinearLayout para la caja blanca de fondo -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitulo"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_login"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="17sp">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_pass_login"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:text="@string/login"
        android:textSize="17sp"
        app:cornerRadius="25dp"
        app:rippleColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/white"
        android:onClick="crearCuenta"
        android:text="Registro"
        android:textSize="17sp"
        app:cornerRadius="25dp"
        app:rippleColor="@color/white"
        app:strokeColor="@color/verdeClaro" />



</RelativeLayout>