<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResetPasswordActivity">



    <TextView
        android:id="@+id/titulo"
        style="@style/etiquetas"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/apptareas"
        android:textSize="40dp"
        android:textColor="@color/verdeClaro"
        />

    <TextView
        android:id="@+id/subtitulo"
        style="@style/etiquetas"
        android:layout_width="41dp"
        android:layout_height="36dp"
        android:layout_below="@id/titulo"
        android:layout_marginTop="5dp"
        android:drawableTop="@mipmap/icono_app_40"
        android:text="@string/registro" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitulo"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp">


        <!-- Correo Electronico -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaEmailReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@android:color/white"
                android:hint="@string/correo_electronico"
                android:textColor="@color/design_default_color_primary"
                android:textSize="17sp"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*El correo electronico debe de estar registrado en la app."
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textStyle="italic"/>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonReset"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:text="Solicitar Contraseña"
        android:textSize="17sp"
        app:cornerRadius="25dp"
        app:rippleColor="@color/white" />

</RelativeLayout>