<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">

    <ImageView
        android:id="@+id/imageViewCover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/perfil_cocina"
        android:scaleType="centerCrop"
        app:layout_collapseMode="parallax"
        android:transitionName="@string/transtionname_picture"
        android:tint="#51673AB7"
        tools:ignore="UseAppTint"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageProfileEdit"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/imagen_perfil"
        app:civ_border_width="3dp"
        app:civ_border_color="#FAFAFA"
        android:layout_marginTop="130dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<!-- Campo para el NOMBRE -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="#4AFFFFFF"
                android:hint="@string/usuario"
                android:textColor="@color/design_default_color_primary"
                android:textSize="17sp">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

<!-- Campo para el TELEFONO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPhoneEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="#4AFFFFFF"
                android:hint="@string/numero_de_telefono"
                android:textColor="@color/design_default_color_primary"
                android:textSize="17sp"
                android:inputType="numberSigned">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

<!-- Boton EDITAR -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ACTUALIZAR"
        android:textSize="17sp"
        app:cornerRadius="25dp"
        app:rippleColor="@color/white"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"/>

<!-- Boton ATRAS-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="15dp"
        android:scaleType="centerCrop"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>